# quas-wex-exort

./: .gitignore  Cargo.toml  LICENSE  README.md  build-and-test.sh  build.sh  install.sh  objectiveai.json  test.sh  version.sh
.config/: nextest.toml
.github/workflows/: release.yml
src/: config.rs  context.rs  main.rs
src/commands/: mod.rs
src/commands/daemon/: begin.rs  mod.rs
src/commands/mcp/: mod.rs
src/commands/mcp/quas_wex_exort/: begin.rs  mod.rs
src/mcp/: arguments.rs  common.rs  list_tools.rs  mod.rs  multi_call.rs  run.rs
src/mcp/loops/: mod.rs  registry.rs
src/mcp/tasks/: mod.rs  registry.rs
test-mcp-server/: Cargo.toml  objectiveai.json
test-mcp-server/src/: main.rs
tests/: gating.rs  list_tools.rs  loops.rs  multi_call.rs  nudge.rs  tasks.rs
tests/common/: echo.rs  mod.rs
