[package]
name = "quas-wex-exort"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
clap = "4.6.1"
dotenv = "0.15.0"
envconfig = "0.11.1"
interprocess = { version = "2.4.2", features = ["tokio"] }
objectiveai-sdk = { version = "2.2.7", features = ["lockfile"] }
rmcp = { version = "1.8.0", features = ["transport-streamable-http-server"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["chrono", "json", "postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net"] }
