[package]
name = "test-mcp-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "test-mcp-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
rmcp = { version = "1.8.0", features = ["server", "transport-streamable-http-server"] }
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
